# internal/models/user.go
@@ -20,5 +20,18 @@ type User struct {
 	PasswordHash string    `json:"-"`
 	CreateTime   time.Time `json:"create_time"`
 	ImagePath    string    `json:"image_path"`
-	Secret       Secret    `json:"secret"`
+	SecondFactor Secret    `json:"second_factor"`
+}
+
+// ================================================================
+// only swagger examples
+
+type UserForSwagger struct {
+	Id           uuid.UUID `json:"id"`
+	Description  string    `json:"description,omitempty"`
+	Username     string    `json:"username"`
+	PasswordHash string    `json:"-"`
+	CreateTime   time.Time `json:"create_time"`
+	ImagePath    string    `json:"image_path"`
+	SecondFactor bool      `json:"second_factor"`
 }
